# local_coding_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  bootstrap.py  bootstrap.sh  pyproject.toml
config/: aider.conf.yml  system-prompt.md
corpus/: .gitignore  fetch-docs.sh
phase1-output/: deepseek_quicktest.ts  qwen3_quicktest.ts
rag/: ingest.py  proxy.py  server.py  sn_schema.py
scripts/: audit-export.sh  phase1-test.sh  start.sh
