[project]
name = "locall-llm-agent"
version = "0.1.0"
description = "Local, privacy-preserving coding agent for ServiceNow AI Agents and Fluent SDK development"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ingest = [
    "tiktoken>=0.7.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
